--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,7 +22,8 @@ endif()
 
 # Create target
 set (UT_NAME ut_imgui)
-add_executable(${UT_NAME}
+#add_executable(${UT_NAME}
+hello_imgui_add_app(${UT_NAME} 
   ${SOURCES_FILES}
 )
 # Includes
