--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -37,7 +37,7 @@ target_include_directories(${UT_NAME}
 
 target_link_libraries(${UT_NAME}
   PRIVATE
-    ONBINGS::bofimgui
+    ONBINGS::bofdearimgui
 	#vcpkg GTest::GTest
 	GTest::gtest_main
     ONBINGS::bofstd
