--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,13 +105,14 @@ endif()
 # depend on pthread lib. These one are get using the fetch_vcpkg_library function as
 # they must be built with a strict control of options which is not possible with vcpkg 
 # build in manifest mode 
-message("==========================Start fetch for ${PROJECT_NAME}=========================")
-fetch_external_library_add(googletest "${LIST_OF_LIB}" https://github.com/google/googletest release-1.12.1)
-make_external_library_available("${LIST_OF_LIB}")
-message("==========================End fetch for ${PROJECT_NAME}===========================")
-set_target_properties(gtest PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-set_target_properties(gtest_main PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-
+if (PROJECT_IS_TOP_LEVEL)
+	message("==========================Start fetch for ${PROJECT_NAME}=========================")
+	fetch_external_library_add(googletest "${LIST_OF_LIB}" https://github.com/google/googletest release-1.12.1)
+	make_external_library_available("${LIST_OF_LIB}")
+	message("==========================End fetch for ${PROJECT_NAME}===========================")
+	set_target_properties(gtest PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+	set_target_properties(gtest_main PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+endif()
 include(cmake/export_version.cmake)
 include(cmake/install.cmake)
 
