--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,12 +137,12 @@ endif()
 # they must be built with a strict control of options which is not possible with vcpkg 
 # build in manifest mode 
 if (PROJECT_IS_TOP_LEVEL)
-	message("==========================Start fetch for ${PROJECT_NAME}=========================")
-	fetch_external_component_add(googletest "${LIST_OF_COMPONENT}" https://github.com/google/googletest release-1.12.1)
-	make_external_component_available("${LIST_OF_COMPONENT}")
-	message("==========================End fetch for ${PROJECT_NAME}===========================")
-	set_target_properties(gtest PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-	set_target_properties(gtest_main PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+#	message("==========================Start fetch for ${PROJECT_NAME}=========================")
+#	fetch_external_component_add(googletest "${LIST_OF_COMPONENT}" https://github.com/google/googletest release-1.12.1)
+#	make_external_component_available("${LIST_OF_COMPONENT}")
+#	message("==========================End fetch for ${PROJECT_NAME}===========================")
+#	set_target_properties(gtest PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+#	set_target_properties(gtest_main PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif()
 include(cmake/export_version.cmake)
 include(cmake/install.cmake)
